--- a/Comeondoit/app/src/main/res/layout/full_discription_item_list_case.xml
+++ b/Comeondoit/app/src/main/res/layout/full_discription_item_list_case.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
+        android:background="@color/time_color"
         android:text="@string/title"
         android:textSize="32dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,6 +53,5 @@
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="@id/date"
         app:layout_constraintTop_toBottomOf="@id/date" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
